<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/EnterPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="27dp"
        android:text="@string/EnterPin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/EnterFriendPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EnterPasswordText"
        android:layout_below="@+id/EnterPasswordText"
        android:layout_marginTop="74dp"
        android:text="@string/ConfirmPin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/EditTextPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EnterPasswordText"
        android:layout_below="@+id/EnterPasswordText"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditTextConfirmPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EnterFriendPhoneNo"
        android:layout_below="@+id/EnterFriendPhoneNo"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/PinRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/EnterFriendPhoneNo"
        android:layout_below="@+id/EditTextConfirmPin"
        android:layout_marginTop="29dp"
        android:text="@string/PinSetup" />

</RelativeLayout>
